# RAG-KnowledgeSystem

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/scripts/: evaluate_retrieval.py  init_kb.py  reindex.py
backend/src/api/: dependencies.py  main.py
backend/src/config/: __init__.py  settings.py
backend/src/data_loader/: __init__.py  code_loader.py  excel_loader.py  html_loader.py  image_loader.py  loader_registry.py  markdown_loader.py  pdf_loader.py  ppt_loader.py  (+5 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.ts
scripts/: init_kb.py
src/api/: dependencies.py  main.py
src/config/: constants.py  settings.py
src/data_loader/: __init__.py  base_loader.py  excel_loader.py  image_loader.py  loader_registry.py  markdown_loader.py  ocr_utils.py  pdf_loader.py  ppt_loader.py  unstructured_loader.py  web_scraper.py
src/embedding/: bge_embedding.py  sparse_embedding.py
src/evaluation/: retrieval_metrics.py
src/generation/: context_builder.py  rag_chain.py
src/ingestion/: document_store.py  metadata_store.py
src/memory/: __init__.py  conversation_memory.py
src/middleware/: __init__.py  guardrails.py  rate_limiter.py  trace.py
src/query_rewriting/: __init__.py  hyde_generator.py  query_decomposer.py  stepback_prompt.py
src/retrieval/: __init__.py  bm25_retriever.py  ensemble_retriever.py  hybrid_retriever.py  reranker.py
src/splitting/: __init__.py  base_splitter.py  code_splitter.py  heading_splitter.py  paragraph_splitter.py  semantic_splitter.py  splitter_factory.py
(+82 files in other folders)
