[project]
name = "rag-langchain-v2"
version = "0.1.0"
description = "Production-ready RAG system with LangChain, Qdrant, and BGE-M3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "qdrant-client>=1.12.0",
    "FlagEmbedding>=1.3.0",
    "numpy>=1.24.0",
    "starlette>=0.37.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "pandas>=2.0",
    "Pillow>=10.0",
    "pytesseract>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "rapidocr-onnxruntime>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ragas>=0.2.0",
]
all-docs = [
    "unstructured[all-docs]>=0.16.0",
]
ocr = [
    "rapidocr-onnxruntime>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ragas>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ragas>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"